tests/compile_fail/header_empty_name.stderr
error: header name cannot be empty
 --> tests/compile_fail/header_empty_name.rs:7:1
  |
7 | #[header("")]
  | ^^^^^^^^^^^^^
